--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
   "homepage": "https://github.com/stenceld/Stock-Watchlist-Including-Login-Auth-and-RESTful-API#readme",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
     "body-parser": "^2.2.1",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
+    "jwt-simple": "^0.5.6",
     "mongoose": "^9.0.0"
   }
 }
